--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
         "jquery": ">=2.1.0",
         "bootstrap": ">=3.1.1",
         "angular": ">=1.3.0",
+        "angular-route": ">=1.3.0",
         "angular-animate": ">=1.3.0",
         "angular-touch": ">=1.3.0"
     }
