--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,20 @@
 {
     "name": "angular-snorql",
     "version": "0.1.0",
+    "main": "build/js/vendor.js",
+    "directory": "bower_components",
+    "ignore": [
+      "**/.*",
+      "node_modules",
+      "components",
+      "bower"
+    ],
     "dependencies": {
-        "jquery": ">=2.1.0",
-        "bootstrap": ">=3.1.1",
-        "angular": ">=1.3.0",
-        "angular-route": ">=1.3.0",
-        "angular-animate": ">=1.3.0",
-        "angular-touch": ">=1.3.0"
+        "jquery": "2.1.x",
+        "bootstrap": "3.x.x",
+        "angular": "1.3.x",
+        "angular-route": "1.3.x",
+        "angular-animate": "1.3.x",
+        "angular-touch": "1.3.x"
     }
 }
