--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "auto-reload-brunch": ">= 1.3",
     "bower": ">=1.3.1",
     "brunch": ">= 1.4",
-    "brunch-signature": "~1.0.1",
     "clean-css-brunch": "~1.7.1",
     "coffee-script-brunch": ">= 1.0 ",
     "connect-livereload": "^0.4.0",
     "cookie-parser": "^1.3.2",
     "css-brunch": "~1.7.0",
+    "digest-brunch": "^1.4.0",
     "ejs": "*",
     "express": "4.x.x",
     "jade-brunch": "~1.8.1",
     "javascript-brunch": "~1.7.1",
+    "keyword-brunch": "^1.7.7",
     "less-brunch": ">= 1.4",
     "marked": "0.2.x",
     "ngmin-uglify-js-brunch": "~1.7.13",
@@ -34,6 +35,5 @@
     "uglify-js": "~2.4.13",
     "uglify-js-brunch": "~1.7.7"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
