--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,11 @@
     "components",
     "bower"
   ],
+ "overrides": {
+    "showdown": {
+      "main": "src/showdown.js"
+    }
+  },
   "dependencies": {
     "jquery": "2.1.x",
     "bootstrap": "3.x.x",
@@ -17,6 +22,7 @@
     "angular-animate": "1.3.x",
     "angular-touch": "1.3.x",
     "angular-ui-codemirror": "~0.1.6",
-    "codemirror": "~4.6.0"
+    "codemirror": "~4.6.0",
+    "angular-nextprot-help": "https://github.com/calipho-sib/nextprot-ui-help/tarball/master"
   }
 }
