--- a/deploy.conf
+++ b/deploy.conf
@@ -1,3 +1,5 @@
 DEV_PATH=npteam@crick:/work/www/dev-snorql.nextprot.org/
 BUILD_PATH=npteam@kant:/work/www/build-snorql.nextprot.org/
 ALPHA_PATH=npteam@uat-web2:/work/www/alpha-snorql.nextprot.org/
+PRO_PATH=npteam@plato:/work/www/snorql.nextprot.org/
+
