--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-nextprot-help": "https://github.com/calipho-sib/nextprot-ui-help/tarball/master"
   },
   "resolutions": {
-    "angular": "1.3.x"
+    "angular": "1.3.x",
+    "codemirror": "~4.6.0"
   }
 }
