--- a/deploy.conf
+++ b/deploy.conf
@@ -1,3 +1,9 @@
-DEV_PATH=npteam@crick:/work/www/dev-snorql.nextprot.org/
-BUILD_PATH=npteam@kant:/work/www/build-snorql.nextprot.org/
-ALPHA_PATH=npteam@uat-web2:/work/www/alpha-snorql.nextprot.org/
+DEV_HOST=npteam@crick
+BUILD_HOST=npteam@kant
+ALPHA_HOST=npteam@uat-web2
+PRO_PATH=npteam@plato
+
+DEV_PATH=/work/www/dev-snorql.nextprot.org/
+BUILD_PATH=/work/www/build-snorql.nextprot.org/
+ALPHA_PATH=/work/www/alpha-snorql.nextprot.org/
+PRO_PATH=/work/www/snorql.nextprot.org/
