--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-animate": "1.3.x",
     "angular-touch": "1.3.x",
     "angular-ui-codemirror": "~0.1.6",
+    "angular-cookie": "~4",
     "codemirror": "~4.6.0",
     "angular-nextprot-help": "https://github.com/calipho-sib/nextprot-ui-help/tarball/master"
   },
