Fixing deploy conf

--- a/deploy.conf
+++ b/deploy.conf
@@ -1,7 +1,7 @@
 DEV_HOST=npteam@crick
 BUILD_HOST=npteam@kant
 ALPHA_HOST=npteam@uat-web2
-PRO_PATH=npteam@plato
+PRO_HOST=npteam@plato
 
 DEV_PATH=/work/www/dev-snorql.nextprot.org/
 BUILD_PATH=/work/www/build-snorql.nextprot.org/
