--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {},
   "dependencies": {
     "auto-reload-brunch": ">= 1.3",
-    "bower": ">=1.3.1",
-    "brunch": ">= 1.4",
+    "bower": "1.3.12",
+    "brunch": "1.7.20",
     "clean-css-brunch": "~1.7.1",
     "coffee-script-brunch": ">= 1.0 ",
     "connect-livereload": "^0.4.0",
