--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=nextprot-snorql
 sonar.projectName=nextprot snorql
-sonar.projectVersion=0.6.0-SNAPSHOT
+sonar.projectVersion=0.6.0
 sonar.sources=app/js, app/css, app/assets/partials
 sonar.language=js
 sonar.sourceEncoding=UTF-8
