--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "angular-ui-codemirror": "~0.1.6",
     "angular-cookie": "~4",
     "codemirror": "~4.6.0",
-    "angular-nextprot-help": "https://github.com/calipho-sib/nextprot-ui-help/tarball/master"
+    "angular-nextprot-help": "2.0.3"
   },
   "resolutions": {
     "angular": "1.3.x",
