--- a/bower.json
+++ b/bower.json
@@ -15,15 +15,20 @@
     }
   },
   "dependencies": {
-    "jquery": "2.1.x",
-    "bootstrap": "3.x.x",
-    "angular": "1.3.x",
-    "angular-route": "1.3.x",
-    "angular-animate": "1.3.x",
-    "angular-touch": "1.3.x",
-    "angular-ui-codemirror": "~0.1.6",
-    "angular-cookie": "~4",
+    "jquery": "~2.1",
+    "bootstrap": "~3",
+    "underscore": "~1",
+    "angular": "1.3.18",
+    "angular-route": "1.4.5",
+    "angular-sanitize": "1.4.5",
+    "angular-resource": "1.4.5",
+    "angular-touch": "1.4.5",
+    "angular-strap": "~0",
+    "angular-animate": "1.4.5",
+    "angular-cookie": "4.0.9",
+    "angular-loader": "1.4.5",
     "codemirror": "~4.6.0",
+    "angular-ui-codemirror": "~0.1.6",
     "angular-nextprot-help": "2.0.8"
   },
   "resolutions": {
