--- a/package.json
+++ b/package.json
@@ -12,28 +12,27 @@
   },
   "scripts": {},
   "dependencies": {
-    "auto-reload-brunch": ">= 1.3",
+    "auto-reload-brunch": "1.7.5",
     "bower": "1.3.12",
     "brunch": "1.7.20",
-    "clean-css-brunch": "~1.7.1",
-    "coffee-script-brunch": ">= 1.0 ",
-    "connect-livereload": "^0.4.0",
-    "cookie-parser": "^1.3.2",
-    "css-brunch": "~1.7.0",
-    "digest-brunch": "^1.4.0",
-    "ejs": "*",
-    "express": "4.x.x",
-    "jade-brunch": "~1.8.1",
-    "javascript-brunch": "~1.7.1",
-    "keyword-brunch": "^1.7.7",
-    "less-brunch": ">= 1.4",
-    "marked": "0.2.x",
-    "ngmin-uglify-js-brunch": "~1.7.13",
-    "nodemailer": "0.3.x",
-    "static-jade-brunch": ">= 1.4",
-    "stylus-brunch": "~1.8.0",
-    "uglify-js": "~2.4.13",
-    "uglify-js-brunch": "~1.7.7"
+    "clean-css-brunch": "1.7.1",
+    "clone": "^2.1.0",
+    "coffee-script-brunch": "1.8.1",
+    "cookie-parser": "1.3.3",
+    "css-brunch": "1.7.0",
+    "del": "^2.2.2",
+    "dest": "^0.3.1",
+    "ejs": "2.2.2",
+    "errorhandler": "1.1.1",
+    "express": "4.11.1",
+    "gulp": "^3.9.1",
+    "gulp-vulcanize": "^6.1.0",
+    "javascript-brunch": "1.7.1",
+    "keyword-brunch": "1.7.8",
+    "less-brunch": "1.7.2",
+    "parse5": "^3.0.2",
+    "stylus-brunch": "1.8.1",
+    "uglify-js-brunch": "1.7.7"
   },
   "devDependencies": {}
 }
