update SNORQL typo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextprot-snorql",
   "version": "2.0.0",
-  "description": "neXtProt SnorQL",
+  "description": "neXtProt SNORQL",
   "authors": [
     "Olivier Evalet <evaleto@gmail.com>"
   ],
